# codex-compaction-memory-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: hooks.json
.codex-stage/: 01-audit.md  02-fix-and-validate.md  03-final-reconcile.md  real-compaction-pressure-result.md
.codex-state/: LIVE_MEMORY.md
.codex/hooks/: hook_utils.py  post_compact_marker.py  pre_compact_memory_snapshot.py  session_start_memory_loader.py  user_prompt_submit_memory_reminder.py
.codex/memory/: LIVE_MEMORY.md
docs/: COMPACTION_EVIDENCE.md  FEATURES.md  IMPLEMENTATION_STATUS.md  RUNBOOK.md
prompts/: 01-audit-readonly.md  02-fix-and-validate.md  03-final-reconcile.md  100-real-compaction-pressure.md  99-memory-stress.md
scripts/: assert_codex_run_success.sh  inspect_memory.sh  run_codex_sequence.sh  run_codex_watch.sh  simulate_hooks.sh  watch_codex_jsonl.py  watch_compaction.sh
src/codex_memory_lab/: __init__.py  calculator.py
tests/: test_calculator.py
