[project]
name = "codex-compaction-memory-lab"
version = "0.1.0"
description = "Codex CLI durable memory and compaction hook test repo"
requires-python = ">=3.10,<3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
